infra/k8s-gcp/expiration-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          image: redis:alpine
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: expiration-redis-data
              mountPath: /data
      volumes:
        - name: expiration-redis-data
          persistentVolumeClaim:
            claimName: expiration-redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-service
spec:
  type: ClusterIP
  selector:
    app: expiration-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
