infra/k8s-gcp/hedgehog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgehog-consultancy-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hedgehog-consultancy
  template:
    metadata:
      labels:
        app: hedgehog-consultancy
    spec:
      containers:
        - name: hedgehog-consultancy
          image: europe-north1-docker.pkg.dev/project-809e066d-e5ea-4d42-aa1/ticketing/hedgehog-consultancy:latest
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: hedgehog-consultancy-service
spec:
  type: ClusterIP
  selector:
    app: hedgehog-consultancy
  ports:
    - name: hedgehog-consultancy
      protocol: TCP
      port: 3001
      targetPort: 3001
