infra/k8s-gcp/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/users/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 3000
      - path: /api/tickets
        pathType: ImplementationSpecific
        backend:
          service:
            name: tickets-service
            port:
              number: 3002
      - path: /api/tickets/.+
        pathType: ImplementationSpecific
        backend:
          service:
            name: tickets-service
            port:
              number: 3002
      - path: /api/orders
        pathType: ImplementationSpecific
        backend:
          service:
            name: orders-service
            port:
              number: 3003
      - path: /api/orders/.+
        pathType: ImplementationSpecific
        backend:
          service:
            name: orders-service
            port:
              number: 3003
      - path: /api/hedgehog/consult
        pathType: ImplementationSpecific
        backend:
          service:
            name: hedgehog-consultancy-service
            port:
              number: 3001
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-service
            port:
              number: 3000
